--- a/Canvast/styles.css
+++ b/Canvast/styles.css
@@ -39,10 +39,10 @@ body{
 
 .container{
     width: 300px;
-    background: rgb(177, 188, 218);
-    border: 7px solid rgba(237, 242, 255, 0.627);
+    background: rgb(255, 255, 255);
+    border: 7px solid #ffd51c1f;
     border-radius: 20px;
-    box-shadow: inset -3 -3 10px;
+    box-shadow: 0 0 25px black;
 }
 
 .top-form{
@@ -56,30 +56,27 @@ body{
 .top-form h1{
     font-size: 2.3em;
     margin: .3em;
-    color: rgba(252, 220, 74, 0.859);
-    text-shadow: 0px 0px 1px black;
+    color: #ffd71c;
     letter-spacing: 1px;
 }
 
-.top-form label{
-    font-weight: 500;
-    color: rgb(234, 238, 255);
-    letter-spacing: .5px;
+.top-form h1::selection{
+    background-color: #010510;
+    color: rgb(44, 76, 220);
 }
 
 .login-box input{
     width: 100%;
     height: 40px;
-    background: transparent;
-    border: 2px solid rgb(234, 238, 255);
+    margin-top: 10px;
+    background: #fafafa;
+    border: 2px solid #f8f8f8;
     border-radius: 20px;
 }
 
 .login-box input::placeholder{
-    color: rgb(234, 238, 255);
-    font-style: italic;
+    color: #878787;
     padding: 5px;
-    letter-spacing: .8px;
 }
 
 .login-button button{
@@ -110,19 +107,18 @@ body{
 
 .bot-form label{
     font-size: 14px;
-    color: rgb(234, 238, 255);
+    color: #878787;
 }
 
 .bot-form button{
     font-weight: 350;
-    font-style: italic;
+
     font-size: 11px;
     background:transparent;
     border: none;
     text-decoration: underline;
-    color: rgba(255, 235, 148, 0.859);
+    color: #878787;
     letter-spacing: 1px;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.629);
 }
 
 .bot-form button:hover{
